--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preload" href="/path-to-font/Redaction.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/path-to-font/Redaction-10.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/path-to-font/Redaction-20.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/path-to-font/Redaction-35.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/path-to-font/Redaction-50.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/path-to-font/Redaction-70.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/path-to-font/Redaction-100.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>horses and divorces</title>
   </head>
